table width fixed and text wrap added

--- a/assets/styles/dashboard.css
+++ b/assets/styles/dashboard.css
@@ -1,9 +1,36 @@
 .table th,
 .table td {
   vertical-align: middle;
+  word-break: break-word;
+  width: auto;
+}
+
+.table{
+  table-layout: fixed;
+  width: 100%;
+}
+
+.table th:nth-child(1),
+.table td:nth-child(1){
+  width: 50px;
+  text-align: center;
+}
+.table th:nth-child(2),
+.table td:nth-child(2){
+  width: 50%;
+}
+.table th:last-child,
+.table td:last-child{
+  width: 20%;
 }
 
 .form-control.is-invalid{
   padding-right: 0;
   background-image: none;  
+}
+
+.subtask-text{
+  display: inline-block;
+  width: calc(100% - 50px);
+  vertical-align: text-top;
 }
